# IDeSyDe

./: .earthlyignore  .gitignore  .jabbarc  .project  .scalafmt.conf  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Earthfile  FlightInformationFunctionReactor.forxml  IDeSyDeLibrary.py  MANIFEST.in  Makefile  Project.toml  README.md  TestRobot.py  TestsBenchmark.robot  build.gradle  build.gradle.old  build.rs  build.sbt  build.sc  build.sc.old  common.fbs  core_data_generated.rs  core_headers.fbs  core_headers.json  dsi.fbs  example.db  example.xml  exploration_interfaces.proto  export_to_idesyde.m  gradlew  identification_interfaces.proto  idesyde-manifest.rc  idesyde.build_artifacts.txt  idesyde.spec  interactive_console_output.xml  interfaces.proto3  large_platform.fiodl  (+26 more)
cpp-core-blueprints/: CMakeLists.txt
cpp-core-blueprints/include/: core.hh  headers.hh
python/: MANIFEST.in  Makefile  example.db  pyoxidizer.bzl  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_dsi.py  test_sdf_execution.py
python-blue-core/: pyproject.toml
python-blue-core/idesyde/: blueprints.py  core.py  data.py
python/desyde/: identification.py  interfaces.py  preprocessing.py
python/desyde/zinc/: comb_task_scheduler_core.mzn
python/desyder/: api.py  cli.py  exploration.py  identification.py  interfaces.py  sdf.py  solvers.py
python/idesyde/: __main__.py  api.py  cli.py  exploration.py  identification.py  interfaces.py  math.py  sdf.py
python/idesyde/identification/: api.py  interfaces.py  models.py  rules.py
python/idesyde/minizinc/: sdf_job_scheduling.mzn  sdf_linear_dmodel_test.dzn  sdf_mpsoc_linear_dmodel.mzn
rust-blueprints/: Cargo.toml
rust-blueprints/src/: lib.rs  macros.rs  messages.rs
rust-bridge-forsyde-io/: Cargo.toml
rust-bridge-forsyde-io/src/: lib.rs
rust-bridge-java/: Cargo.toml
rust-bridge-java/src/: lib.rs
rust-bridge-matlab-simulink/: Cargo.toml  export_to_idesyde.m  extract_from_subsystem.m  extract_from_subsystem_copy.m
rust-bridge-matlab-simulink/src/: main.rs
rust-bridge-minizinc/: Cargo.toml
rust-bridge-minizinc/src/: AperiodicAsynchronousDataflowToPartitionedMemoryMappableMulticoreAndPL.mzn  AperiodicAsynchronousDataflowToPartitionedTiledMulticore.mzn  lib.rs
rust-bridge-ortools/: .clangd  .gitignore  Cargo.toml  README.md  build.rs
rust-bridge-ortools/include/: solutions.hh
rust-bridge-ortools/ortools/cmake/: protobuf-targets.cmake
rust-bridge-ortools/ortools/examples/advanced_linear_programming/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/area_socp/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_groups_mip/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_groups_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_linear_sum_assignment/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_min_flow/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_mip/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_task_sizes_mip/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_task_sizes_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_teams_mip/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assignment_teams_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/assumptions_sample_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/balance_min_flow/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/basic_example/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/bin_packing_mip/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/binpacking_2d_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/binpacking_problem_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/bool_or_sample_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/branch_and_bound/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/branch_and_bound_main/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/channeling_sample_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/clone_model_sample_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cocktail_hour/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/constraint_programming_cp/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/costas_array_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/course_scheduling/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/course_scheduling_run/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cp_is_fun_cp/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cp_is_fun_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cp_sat_example/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cryptarithm_sat/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cutting_stock/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrp_disjoint_tw/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_soft_capacity/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_breaks/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_precedences/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_refueling/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_resources/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_stop_times_and_resources/: CMakeLists.txt
rust-bridge-ortools/ortools/examples/cvrptw_with_time_dependent_costs/: CMakeLists.txt
rust-bridge-ortools/ortools/include/: ortools_export.h
rust-bridge-ortools/src/: lib.rs  solutions.cc  solutions.rs
rust-common/: Cargo.toml
rust-common/src/: common.rs  irules.rs  lib.rs  main.rs  models.rs
rust-core/: Cargo.toml
rust-core/src/: data.rs  headers.rs  lib.rs  macros.rs
rust-core/src/idesyde/: core.rs
rust-orchestration/: Cargo.toml
rust-orchestration/src/: exploration.rs  identification.rs  lib.rs  main.rs  models.rs  orchestration.rs
(+1527 files in other folders)
