[workspace]
members = [
    "rust-core",
    "rust-orchestration"
]
description = "IDeSyDe Rust suite"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
clap = { version = "4.2.1", features = ["derive"] }
sha3 = "0.10.6"
log = "0.4.17"
env_logger = "0.10.0"

[workspace.package]
version = "0.4.4"
authors = ["Rodolfo Jordao"]
edition = "2021"
