[workspace]
members = [
    "rust-core",
    "rust-orchestration",
    "rust-blueprints",
    "rust-common",
    "rust-bridge-matlab-simulink"
]
description = "IDeSyDe Rust suite"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
clap = { version = "4.2.1", features = ["derive"] }
sha3 = "0.10.6"
log = "0.4.17"
env_logger = "0.10.0"
quote = "1.0.27"
syn = "2.0.15"
ciborium = "0.2.1"
rayon = "1.7"
downcast-rs = "1.2.0"
schemars = "0.8.12"
petgraph = "0.6.3"
reqwest = { version = "0.11.18", features = ["blocking"] }

[workspace.package]
version = "0.6.0"
authors = ["Rodolfo Jordao"]
edition = "2021"