[tool.poetry]
name = "idesyde"
version = "0.1.7"
description = "Generic Design Space Exploration for models based system design"
authors = ["jordao <jordao@kth.se>"]
maintainers = ["jordao <jordao@kth.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://forsyde.github.io/IDeSyDe/"
repository = "https://github.com/forsyde/IDeSyDe"
documentation = "https://forsyde.github.io/IDeSyDe/"
include = [ "idesyde/minizinc/*.mzn" ]

[tool.poetry.scripts]
zidesyde = 'idesyde.cli:cli_entry'

[tool.poetry.dependencies]
python = "^3.7"
forsyde-io-python = "^0.2.6"
numpy = "^1.20"
sympy = "^1.7"
minizinc = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
