[tool.poetry]
name = "idesyde"
version = "0.1.5"
description = "ForSyDe's Identification and Design Space Exploration Tool"
authors = ["jordao <jordao@kth.se>"]
license = "MIT"
include = ["idesyde/minizinc"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
sympy = "*"
minizinc = "*"
forsyde-io-python = "0.2.^0"
# forsyde-io-python = { path = "../../forsyde-io/python/" }

[tool.poetry.dev-dependencies]
mypy = "*"
sphinx = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
idesyde = "idesyde.cli:cli_entry"
