[package]
name = "idesyde-blueprints"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
idesyde-core = { path = "../rust-core" }
clap = { workspace = true }
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
flatbuffers.workspace = true
