[package]
name = "idesyde-blueprints"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
idesyde-core = { path = "../rust-core" }
clap = { workspace = true }
derive_builder.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
serde.workspace = true