[package]
name = "idesyde-blueprints"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ciborium.workspace = true
clap = { workspace = true }
derive_builder.workspace = true
env_logger.workspace = true
idesyde-core = { path = "../rust-core" }
log.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
serde.workspace = true