[package]
name = "rust-bridge-matlab-simulink"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
idesyde-core = { path = "../rust-core" }
idesyde-blueprints = { path = "../rust-blueprints" }
idesyde-common = { path = "../rust-common" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }