[package]
name = "rust-bridge-ortools"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idesyde-core = { path = "../rust-core" }
idesyde-blueprints = { path = "../rust-blueprints" }
idesyde-common = { path = "../rust-common" }
cxx.workspace = true

[build-dependencies]
cxx-build.workspace = true
