[package]
name = "idesyde-common"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
idesyde-core = { path = "../rust-core" }
idesyde-blueprints = { path = "../rust-blueprints" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
ciborium.workspace = true
env_logger.workspace = true
log.workspace = true
schemars.workspace = true
petgraph.workspace = true
