[package]
name = "idesyde-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
ciborium.workspace = true
derive_builder.workspace = true
downcast-rs.workspace = true
md5.workspace = true
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2.workspace = true
url.workspace = true

[build-dependencies]
prost-build.workspace = true
