[package]
name = "idesyde-orchestration"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
env_logger.workspace = true
idesyde-core = { path = "../rust-core" }
rmp-serde = { workspace = true }
serde_json.workspace = true
sha3 = { workspace = true }
log.workspace = true
