[package]
name = "idesyde-orchestration"
author.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
idesyde-core = { path = "../rust-core" }
clap = { workspace = true }
env_logger.workspace = true
log.workspace = true
rmp-serde = { workspace = true }
serde_json.workspace = true
sha3 = { workspace = true }
rayon.workspace = true